iowow (1.4.19) UNRELEASED; urgency=medium

  * Fixed memory leak in iwstw_schedule_empty_only()

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 02 Jul 2024 18:50:56 +0700

iowow (1.4.18) testing; urgency=medium

  * Added iwp_random_fill() (iwp.h)
  * Added convenient numeric conversion functions (iwconv.h)
  * Chore: iwp_{lock,unlock} fcnt replaced by more convenient and reliable flock()
  * Added iwxstr_printf_alloc() (iwxstr.h)
  * Copyright updated
  * Added new iwjsreg.h module - simple JSON key-value file store with atomic
  updates.
  * Allowed to construct JBL_NODE without IWPOOL ini this case node data will
  be allocated by malloc and should be freed by visitor.

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 16 Apr 2024 11:02:51 +0700

iowow (1.4.17) testing; urgency=medium

  * Added void iwulist_reset(IWULIST *list) (iwarr.h)
  * Added experimental jbn_from_js() (iwjson.h)
  * Fixed C++ compilation errors https://github.com/Softmotions/ejdb/issues/381
  * Fixed Correct UCS-16 surrogate pair start code point. #51
  * Added iwchars.h replacing some ctype.h functions.
  * Added simple refcounting container iwrefs.h
  * Fixed incorrect parsing of empty JSON keys.
  * Added jbn_as_xml() (iwjson.h)
  * Added jbn_get() (iwjson.h)
  * Added IW_ERROR_OPERATION_TIMEOUT common error code.
  * Removed support of legacy iwkv v1 data file format.
  * Fixed incorrect read of memory bytes (reported by valgrind)
  * Fixed windows build
  * Added ref counting feature to iwpool (iwpool.h)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 13 Nov 2023 23:29:35 +0700

iowow (1.4.16) testing; urgency=medium

  * Fixed behavior of iwp_tmpdir() accourding to #47
  * Fixed  Incorrect serialization of INT64_MIN by iwitoa() #48 (iwconv.h)
  * Added iwxstr_insert() (iwxstr.h)
  * ~8% IO performance improvements due to use of MADV_RANDOM
  * Fixed Github Vulnerability Report GHSL-2022-066
  * Added additional IW_ERROR_XX codes (iwlog.h)
  * Added VERBOSE log level (iwlog.h)